--- a/less/theme-wizard.less
+++ b/less/theme-wizard.less
@@ -35,6 +35,14 @@ body {
         .text-mark {
           font-weight: 600;
         }
+        .period-td-payment-page { //constant width on dynamically changing td, otherwise slider stucks
+          min-width: 150px;
+          max-width: 150px;
+        }
+        .price-td-payment-page { //constant width on dynamically changing td, otherwise slider stucks
+          min-width: 90px;
+          max-width: 90px;
+        }
         .glyphicon-trash {
           color: lighten(@text-gray-color, 10%);
           font-size: 13px;
